--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,12 +1,13 @@
 {
-  "extends": "@tsconfig/node22/tsconfig.json",
-  "include": ["cypress.config.ts", "eslint.config.ts", "vite.config.ts", "vitest.config.ts"],
+  "include": ["vite.config.ts", "vitest.config.ts"],
   "compilerOptions": {
-    "noEmit": true,
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-
+    "composite": true,
+    "skipLibCheck": true,
     "module": "ESNext",
     "moduleResolution": "Bundler",
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "noEmit": true,
     "types": ["node"]
   }
 }
