--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,9 +1,15 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["./e2e/**/*", "./support/**/*"],
-  "exclude": ["./support/component.*"],
   "compilerOptions": {
+    "target": "ES2020",
+    "lib": ["ES2020", "DOM"],
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "types": ["cypress", "node"],
     "isolatedModules": false,
-    "types": ["cypress"]
-  }
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "strict": true
+  },
+  "include": ["./e2e/**/*", "./support/**/*"],
+  "exclude": ["./support/component.*"]
 }
