Constants and Texts extracted, Selection x^2 added, more gameification: 1st game of the day, etc.

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,5 +1,5 @@
 {
-  "include": ["vite.config.ts", "vitest.config.ts"],
+  "include": ["vite.config.ts", "vitest.config.ts", "src/config/text-de.ts"],
   "compilerOptions": {
     "composite": true,
     "skipLibCheck": true,
